--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -111,6 +111,10 @@
     </div>
 
     <script>
+        function getApiBaseUrl() {
+            return window.ENV?.API_BASE_URL || '/web-app-api';
+        }
+
         function debugInfo(group) {
             const userId = initDataUnsafe.user?.id;
             const member = group.members?.find(m => m.id === userId);
@@ -174,7 +178,7 @@
 
         async function updateGroups() {
             try {
-                const response = await fetch('/web-app-api', {
+                const response = await fetch(getApiBaseUrl(), {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
@@ -204,7 +208,7 @@
             }
 
             try {
-                const response = await fetch('/web-app-api', {
+                const response = await fetch(getApiBaseUrl(), {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
@@ -239,7 +243,7 @@
             }
 
             try {
-                const response = await fetch('/web-app-api', {
+                const response = await fetch(getApiBaseUrl(), {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
@@ -266,7 +270,7 @@
         async function setReady(groupId) {
             try {
                 console.log('Setting ready for group:', groupId);
-                const response = await fetch('/web-app-api', {
+                const response = await fetch(getApiBaseUrl(), {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
@@ -296,7 +300,7 @@
         async function unsetReady(groupId) {
             try {
                 console.log('Unsetting ready for group:', groupId);
-                const response = await fetch('/web-app-api', {
+                const response = await fetch(getApiBaseUrl(), {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
@@ -325,7 +329,7 @@
 
         async function leaveGroup(groupId) {
             try {
-                const response = await fetch('/web-app-api', {
+                const response = await fetch(getApiBaseUrl(), {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
@@ -350,7 +354,7 @@
 
         async function deleteGroup(groupId) {
             try {
-                const response = await fetch('/web-app-api', {
+                const response = await fetch(getApiBaseUrl(), {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
@@ -361,7 +365,6 @@
                         groupId: groupId
                     })
                 });
-
 
                 if (!response.ok) {
                     const errorData = await response.json();
